feat: 바우처 지갑 기능 추가